# monglepick-recommend

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: cd-prod.yml  ci-cd.yml
app/: config.py  main.py  search_elasticsearch.py  search_es_bootstrap.py  search_genre_catalog.py
app/api/: deps.py  ocr.py  onboarding.py  router.py  search.py
app/background/: __init__.py  like_flush.py
app/core/: database.py  metrics.py  scheduler.py  security.py
app/model/: entity.py  schema.py
app/repository/: movie_repository.py  popular_search_repository.py  search_history_repository.py  trending_repository.py  user_preference_repository.py  worldcup_match_repository.py  worldcup_session_repository.py
app/service/: autocomplete_service.py  ocr_service.py  onboarding_service.py  popular_search_overlay.py  receipt_parser_service.py  search_service.py  trending_service.py  worldcup_service.py
app/v2/api/: deps.py  favorite_genre.py  favorite_movie.py  like.py  match_cowatch.py  onboarding.py  review.py  router.py  search.py  wishlist.py
app/v2/core/: database.py  sql_logger.py
docs/: movie_like_recommend_migration.md
scripts/: bootstrap_search_es.py
tests/: conftest.py  test_autocomplete_service.py  test_home_box_office_v2.py  test_like.py  test_onboarding.py  test_personalized_refresh_service.py  test_personalized_search_service.py  test_related_movie_service.py  test_review_service.py  test_search.py  test_search_elasticsearch.py  test_search_service_v2.py  test_v2_dto.py  test_v2_trending_service.py
(+30 files in other folders)
