[project]
name = "monglepick-recommend"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "aiomysql>=0.3.2",
    # 2026-04-07 신규: 좋아요 write-behind flush 스케줄러용 (주기적 Redis→MySQL 배치 반영)
    "apscheduler>=3.10.4",
    "cryptography>=46.0.6",
    "fastapi>=0.135.1",
    "greenlet>=3.3.2",
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "pyjwt>=2.12.1",
    # VM3 Prometheus 스크레이프용 /metrics 엔드포인트 미들웨어.
    "prometheus-fastapi-instrumentator>=7.0.0",
    "python-dotenv>=1.2.2",
    "redis>=7.3.0",
    "sqlalchemy[asyncio]>=2.0.48",
    "typing-extensions>=4.15.0",
    "uvicorn>=0.41.0",
]
